--- a/images/python/requirements.txt
+++ b/images/python/requirements.txt
@@ -1,15 +1,14 @@
-fastapi==0.63.0
-numpy==1.20.3
-opni-nats==0.0.0.2
-pandas==1.2.3
 aiohttp==3.7.4.post0
 boto3==1.17.45
 botocore==1.20.45
-scikit_learn==0.24.1
-aiohttp==3.7.4.post0
-kubernetes==12.0.1
-schedule
 cachetools==4.2.1
 elasticsearch[async]==7.12.0
+fastapi==0.63.0
 jsonpickle==1.5.1
+kubernetes==12.0.1
+numpy==1.20.3
+opni-nats==0.0.0.2
+pandas==1.2.3
+scikit_learn==0.24.1
+schedule==1.1.0
 uvicorn==0.13.4
