Test refactoring; use seaweedfs for default internal s3

--- a/config/crd/bases/opni.io_opniclusters.yaml
+++ b/config/crd/bases/opni.io_opniclusters.yaml
@@ -2122,6 +2122,20 @@ spec:
                     type: object
                   internal:
                     description: If set, Opni will deploy an S3 pod to use internally. Cannot be set at the same time as `external`.
+                    properties:
+                      persistence:
+                        properties:
+                          accessModes:
+                            items:
+                              type: string
+                            type: array
+                          enabled:
+                            type: boolean
+                          request:
+                            type: string
+                          storageClass:
+                            type: string
+                        type: object
                     type: object
                 type: object
               services:
