--- a/config/samples/_v1beta1_opnicluster.yaml
+++ b/config/samples/_v1beta1_opnicluster.yaml
@@ -11,6 +11,11 @@ spec:
       pretrainedModels:
         - name: control-plane
   elastic:
+    workloads:
+      data:
+        dedicatedPod: false
+      client:
+        dedicatedPod: false
     version: 1.13.2
   nats:
     authMethod: nkey
